# bobomb

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build_protobufs.sh  flake.nix  notes.txt
bobomb-debugger/: .gitignore  Cargo.toml
bobomb-debugger/src/: ast.rs  client.rs  ctrl_c.rs  disassemble.rs  grammar.lalrpop  main.rs  parser.rs  repl.rs
bobomb-debugger/src/repl/: mod.rs  printer.rs
bobomb-grpc/: Cargo.toml  build.rs
bobomb-grpc/proto/: api.proto
bobomb-grpc/src/: api.rs  api_grpc.rs  grpc.rs  lib.rs  protobuf.rs  trace.rs
crates/docparse/: Cargo.toml
crates/docparse/src/: main.rs  scraper.rs  types.rs
probes/: README.md  memory_read_write.stap  nmi.stap
proto/: api.proto  trace.proto
repl/: debugger_server_pb.rb  debugger_server_services_pb.rb  repl.rb
src/: cpu.rs  lib.rs  main.rs  mem.rs  ppu.rs
src/cpu/: address.rs  cpu.rs  mod.rs
src/debugger/: ast.rs  disassemble.rs  grammar.lalrpop  mod.rs  parser.rs
src/grpc/: debugger.rs  mod.rs
src/nes/: address.rs  controller.rs  cpu.rs  debugger.rs  executor.rs  interconnect.rs  macros.rs  mod.rs  ppu.rs  rom.rs
src/nes/cpu/: address_modes.rs  disassemble.rs  dispatch.rs  macros.rs  mod.rs  status.rs
src/nes/cpu/opcodes/: adc.rs  and.rs  asl.rs  bcc.rs  bcs.rs  beq.rs  bit.rs  bmi.rs  bne.rs  bpl.rs  branch.rs  brk.rs  bvc.rs  bvs.rs  clc.rs  cld.rs  cli.rs  clv.rs  cmp.rs  cpx.rs  cpy.rs  dec.rs  dex.rs  dey.rs  eor.rs  inc.rs  inx.rs  iny.rs  jmp.rs  jsr.rs  lda.rs  ldx.rs  ldy.rs  load.rs  lsr.rs  mod.rs  ora.rs  pha.rs  php.rs  pla.rs  (+19 more)
src/nes/debugger/: debugger.rs  debugger_server.proto  debugger_server.rs  debugger_server_grpc.rs  mod.rs
src/nes/ppu/: control.rs  mask.rs  mod.rs  palette.rs
