[package]
name = "bobomb-debugger"
version = "0.2.0"
authors = ["Andrew Williams <williams.andrew@gmail.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }

[dependencies]
ansi_term = "0.12"
anyhow = "1.0.34"
bytes = "0.5.6"
ctrlc = "3.1.7"
futures = "0.3.8"
lalrpop-util = "0.19.0"
lazy_static = "1.4.0"
num-traits = "0.2.14"
parking_lot = "0.11.1"
regex = "1"
rustyline = "7.0.0"

bobomb-grpc = { path = "../bobomb-grpc" }
