[package]
name = "docparse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
ego-tree = "0.6.2"
itertools = "0.11.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking"]}
scraper = "0.18.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3.17"
